crates/rspack_error/tests/out_of_order/multiple_file_syntax_error/fixtures__multiple_file_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
expression: multiple_file_syntax_error
---
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected a semicolon
         ╭─[1:1]
       1 │ const CONST = 9000 % 2;
       2 │ const  D {
         ·          ┬
         ·          ╰── Expected a semicolon
       3 │     // Comma is required, but parser can recover because of the newline.
       4 │     d = 10
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.
ModuleParseError

  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expression expected
         ╭─[4:1]
       4 │     d = 10
       5 │     g = CONST
       6 │ }
         · ▲
         · ╰── Expression expected
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

